cfail/ui/u8-vec.stderr
error[E0277]: the trait bound `typenum::bit::B0: typenum::marker_traits::NonZero` is not satisfied
 --> $DIR/u8-vec.rs:8:13
  |
8 |     let _s: PhantomData<Vec<u8, U256, u8>>;
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `typenum::marker_traits::NonZero` is not implemented for `typenum::bit::B0`
  |
  = note: required by `heapless::vec::Vec`
